--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="pushups">...pushups.</string>
     <string name="welcome_back_last_time_you_did">Welcome back! Last time you did</string>
     <string name="history">History</string>
+    <string name="_60">60</string>
 </resources>
