--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="welcome_back_last_time_you_did">Welcome back! Last time you did</string>
     <string name="history">History</string>
     <string name="_60">60</string>
+    <string name="do_as_many_push_ups_as_you_can_in_one_minute_start_the_timer_to_begin">Do as many push-ups as you can in one minute! Start the timer to begin</string>
 </resources>
